--- a/eLibrary/src/main/webapp/addbookform.html
+++ b/eLibrary/src/main/webapp/addbookform.html
@@ -34,7 +34,7 @@
                         <span class="info__item--vip">*</span>
                     </div>
                     <div class="info__item--inp">
-                        <input class="info--inp" required type="number" placeholder="Eg. 10" name="quantity">
+                        <input class="info--inp" required type="number" placeholder="Eg. 10" name="quantity" min="1">
                     </div>
                 </li>
             </ul>
