--- a/eLibrary/src/main/webapp/addreaderform.html
+++ b/eLibrary/src/main/webapp/addreaderform.html
@@ -37,7 +37,7 @@
                         <span class="info__item--vip">*</span>
                     </div>
                     <div class="info__item--inp">
-                        <input class="info--inp" required type="tel" placeholder="Eg. 0918581223" name="readerPhone" pattern="(0)\d{9}">
+                        <input class="info--inp" required type="tel" placeholder="Eg. 0918581223" name="readerPhone" pattern="(84|0[3|5|7|8|9])+([0-9]{8})\b">
                     </div>
                 </li>
             </ul>
