--- a/eLibrary/src/main/webapp/adminloginform.html
+++ b/eLibrary/src/main/webapp/adminloginform.html
@@ -18,7 +18,7 @@
 				placeholder="Your Password" name="password">
 		</div>
 
-		<span class="login-error">Your ID or
+		<span class="login-error active">Your ID or
 			your password was incorrect!</span>
 
 		<button class="login-btn btn" name="loginBtn" value="login">Login</button>
