--- a/eLibrary/src/main/webapp/editbookform.html
+++ b/eLibrary/src/main/webapp/editbookform.html
@@ -38,11 +38,11 @@
 			<li class="info__item">
 
 				<div class="info__item--title">
-					Author <span class="info__item--vip">*</span>
+					Author 
 				</div>
 
 				<div class="info__item--inp">
-					<input class="info--inp book-input-js" required type="text"
+					<input class="info--inp book-input-js" type="text"
 						placeholder="Eg. Robert Martin" name="author">
 				</div>
 			</li>
@@ -55,7 +55,7 @@
 
 				<div class="info__item--inp">
 					<input class="info--inp book-input-js" required type="number"
-						placeholder="Eg. 10" name="quantity">
+						placeholder="Eg. 10" name="quantity" min="1">
 				</div>
 			</li>
 		</ul>
