--- a/eLibrary/src/main/webapp/returnbook.html
+++ b/eLibrary/src/main/webapp/returnbook.html
@@ -10,9 +10,9 @@
 
             <!-- Form to fill in -->
             <div class="return-info">
-            	<input class="info--inp reader-input-js" style="display: none;" required type="text" name="readerIDToRetun" >
+            	<input class="info--inp reader-input-js" style="display: none;" required type="text" name="readerID" >
                 <span class="return-info__label">Books' ID: </span>
-                <input class="return-info__inp" required type="text" placeholder="Eg. 1" name="bookID">
+                <input class="return-info__inp book-input-js" required type="text" placeholder="Eg. 1" name="bookID">
             </div>
 
             <Button type="submit" class="return-modal-btn btn" name="returnBook">RETURN</Button>
