--- a/eLibrary/src/main/webapp/addlibrarianform.html
+++ b/eLibrary/src/main/webapp/addlibrarianform.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="info__item--inp">
 					<input class="info--inp" required type="tel"
-						placeholder="Eg. 0918581223" name="libraPhone" pattern="(0)\d{9}">
+						placeholder="Eg. 0918581223" name="libraPhone" pattern="(84|0[3|5|7|8|9])+([0-9]{8})\b">
 				</div>
 			</li>
 
@@ -45,7 +45,7 @@
 				<div class="info__item--title">Email</div>
 				<div class="info__item--inp">
 					<input class="info--inp" type="email"
-						placeholder="Eg. abc123@gmail.com" name="libraEmail">
+						placeholder="Eg. abc123@gmail.com" name="libraEmail" pattern="^[a-zA-z][a-zA-z0-9_\.]{5,64}@[a-z0-9]{2,254}(\.[a-z0-9]{2,4}){1,2}$">
 				</div>
 			</li>
 
