--- a/eLibrary/src/main/webapp/editlibrarianform.html
+++ b/eLibrary/src/main/webapp/editlibrarianform.html
@@ -47,7 +47,7 @@
 				</div>
 				<div class="info__item--inp">
 					<input class="info--inp info-input-js" required type="tel"
-						placeholder="Eg. 0918581223" pattern="(0)\d{9}" name="libraPhone">
+						placeholder="Eg. 0918581223" pattern="(84|0[3|5|7|8|9])+([0-9]{8})\b" name="libraPhone">
 				</div>
 			</li>
 
@@ -55,7 +55,7 @@
 				<div class="info__item--title">Email</div>
 				<div class="info__item--inp">
 					<input class="info--inp info-input-js" type="email"
-						placeholder="Eg. abc123@gmail.com" name="libraEmail">
+						placeholder="Eg. abc123@gmail.com" name="libraEmail" pattern="^[a-zA-z][a-zA-z0-9_\.]{5,64}@[a-z0-9]{2,254}(\.[a-z0-9]{2,4}){1,2}$">
 				</div>
 			</li>
 
