--- a/eLibrary/src/main/webapp/editreaderform.html
+++ b/eLibrary/src/main/webapp/editreaderform.html
@@ -48,7 +48,7 @@
 				</div>
 				<div class="info__item--inp">
 					<input class="info--inp edit-info--inp-js" required type="tel"
-						placeholder="Eg. 0918581223" name="readerPhone" pattern="(0)\d{9}">
+						placeholder="Eg. 0918581223" name="readerPhone" pattern="(84|0[3|5|7|8|9])+([0-9]{8})\b">
 				</div>
 			</li>
 		</ul>
