--- a/eLibrary/src/main/webapp/libraloginform.html
+++ b/eLibrary/src/main/webapp/libraloginform.html
@@ -19,7 +19,7 @@
 				placeholder="Your Password" name="password">
 		</div>
 
-		<span class="login-error">Your ID or your password was
+		<span class="login-error active">Your ID or your password was
 			incorrect!</span>
 
 		<button class="login-btn btn" name="loginBtn" value="login">Login</button>
